# Simple-Group-Chat-Simulation

./: CMakeLists.txt  README.md  client  server
src/: client.c  server.c
